--- a/Makefile.3ds.soft
+++ b/Makefile.3ds.soft
@@ -24,11 +24,11 @@ INCLUDES	:=	Include
 #---------------------------------------------------------------------------------
 # options for code generation
 #---------------------------------------------------------------------------------
-ARCH	:=	-march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
+ARCH	:=	-march=armv6k -mtune=mpcore -mfloat-abi=softfp -mtp=soft
 
 CFLAGS	:=	-g -Wall -Werror -O2 -mword-relocations \
 			-ffunction-sections -fno-strict-aliasing \
-			-fomit-frame-pointer \
+			-fomit-frame-pointer -Wno-error=unused-variable \
 			$(ARCH)
 
 CFLAGS	+=	$(INCLUDE) -DARM11 -D_3DS
@@ -96,7 +96,7 @@ lib:
 
 $(BUILD): lib
 	@[ -d $@ ] || mkdir -p $@
-	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile.3ds
+	@$(MAKE) --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile.3ds.soft
 
 #---------------------------------------------------------------------------------
 clean:
