--- a/makefile.switch
+++ b/makefile.switch
@@ -32,7 +32,7 @@ CFLAGS	:=	-g -Wall \
 			$(ARCH) \
 			$(BUILD_CFLAGS)
 
-CFLAGS	+=	-DSWITCH $(INCLUDE)
+CFLAGS	+=	-D__SWITCH__ $(INCLUDE)
 
 CXXFLAGS	:= $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++11
 
