--- a/makefile.switch
+++ b/makefile.switch
@@ -19,7 +19,7 @@ include $(DEVKITPRO)/libnx/switch_rules
 TARGET		:=	GeneralGoodSwitch
 SOURCES		:=	src
 DATA		:=	data
-INCLUDES	:=
+INCLUDES	:= SDL
 
 #---------------------------------------------------------------------------------
 # options for code generation
